checking master updates show in gh-pages

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Mahesh Jadhav</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="My Portfolio website" />
-	<meta name="keywords" content="mahesh jadhav, ursmaheshj, j studios, my resume, my portfolio" />
+	<meta name="description" content="Mahesh Jadhav Portfolio Website" />
+	<meta name="keywords" content="mahesh jadhav, ursmaheshj, j studios, Mahesh Jadhav Resume, Mahesh Jadhav Portfolio" />
 	<meta name="author" content="mahesh jadhav" />
 
 	<!-- 
@@ -103,10 +103,10 @@
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
 					<p>
-						Mahesh Jadhav.
+						Mahesh Jadhav
 					</p>
 					<p>
-						Mahesh Jadhav.
+						Mahesh Jadhav
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
