--- a/index.html
+++ b/index.html
@@ -9,20 +9,7 @@
 	<meta name="keywords" content="mahesh jadhav, ursmaheshj, j studios, Mahesh Jadhav Resume, Mahesh Jadhav Portfolio" />
 	<meta name="author" content="mahesh jadhav" />
 	<meta name="google-site-verification" content="5_4TqabLQlnejf6bthR7Xjxt9jZNfv1cLABZNdvBFys" />
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
+	
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -37,6 +24,25 @@
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 	
+	<script type=application/ld+json>
+		{
+			"@context": "https://schema.org",
+			"@type": "Organization",
+			"name": "Mahesh Jadhav",
+			"url": "https://ursmaheshj.github.io/Mahesh-Jadhav",
+			"logo": "https://ursmaheshj.github.io/Mahesh-Jadhav/images/MaheshJadhav.webp",
+			"sameAs": [
+				"https://www.facebook.com/ursmaheshj/",
+				"https://www.medium.com/@ursmaheshj/",
+				"https://www.instagram.com/ursmaheshj",
+				"https://www.linkedin.com/in/ursmaheshj",
+				"https://www.github.com/ursmaheshj"
+				
+		   ]
+		}
+		</script>
+
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Bootstrap  -->
@@ -58,7 +64,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/jstudios.svg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/Mahesh-jadhav.webp);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
