profile pic updated with background transparency

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="mahesh jadhav" />
 	<meta name="google-site-verification" content="5_4TqabLQlnejf6bthR7Xjxt9jZNfv1cLABZNdvBFys" />
 	
-  	<!-- Facebook and Twitter integration -->
+  	<!-- Facebook and Twitter integration
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -19,7 +19,7 @@
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta name="twitter:card" content="" /> -->
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
@@ -71,7 +71,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/MaheshJadhav.webp);"></div>
+							<div class="profile-thumb" style="background: url(images/mahesh.jadhav.webp);"></div>
 							<h1><span>Mahesh Jadhav</span></h1>
 							<h3><span>Developer / Programmer</span></h3>
 							<p>
