--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<link rel="stylesheet" href="css/style.css">
 
 	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
+	<!-- <script src="js/modernizr-2.6.2.min.js"></script> -->
 	<!-- FOR IE9 below -->
 	<!-- [if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -64,7 +64,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/Mahesh-jadhav.webp);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/mahesh.jadhav.webp);" data-stellar-background-ratio="0">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
