about added and projects added

--- a/index.html
+++ b/index.html
@@ -102,18 +102,16 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Mahesh Manohar Jadhav</span></li>
 						<!-- <li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li> -->
 						<li><span class="first-block">Email:</span><span class="second-block">mj241199@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
+						<li><span class="first-block">Mob no:</span><span class="second-block">7774836654</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Mayur PG Hinjawadi, Phase-1,Pune-411557</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
 					<p>
-						Mahesh Jadhav
+						My name is Mahesh. I am a software developer based in Pune, India. I enjoy listening to music, writing computer programmes, and playing table tennis. Drawing is another hobby that entices my curiosity. 
 					</p>
-					<p>
-						Mahesh Jadhav
-					</p>
+					
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://www.github.com/ursmaheshj" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
@@ -490,18 +488,18 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="https://ursmaheshj.github.io/BLOODnegative/" class="work" style="background-image: url(images/blooddonation.png);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>BLOODnegative</h3>
+							<span>PHP</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="https://ursmaheshj.github.io/Student_Management/" class="work" style="background-image: url(images/studentmanagement.png);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
+							<h3>Student Management Project</h3>
+							<span>Django</span>
 						</div>
 					</a>
 				</div>
@@ -617,9 +615,6 @@
 	
 
 
-
-
-
 	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
@@ -681,7 +676,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
+					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></p>
 				</div>
 			</div>
 		</div>
