--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 		}
 		</script>
 
-
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Bootstrap  -->
@@ -634,15 +633,10 @@
 		</div>
 		<div class="choose animate-box">
 			<h2>Contact me...</h2>
-			<form action="#">
+			<form>
 				<div class="row form-group">
 					<div class="col-md-6">
-						<input type="text" id="fname" class="form-control" placeholder="Your firstname">
-					</div>
-				</div>
-				<div class="row form-group">
-					<div class="col-md-6">
-						<input type="text" id="lname" class="form-control" placeholder="Your lastname">
+						<input type="text" id="name" class="form-control" placeholder="Your name">
 					</div>
 				</div>
 
@@ -660,7 +654,7 @@
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
+						<textarea name="message" id="detail" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
 					</div>
 				</div>
 				<div class="form-group">
@@ -676,7 +670,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></p>
+					<p>&copy;Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></p>
 				</div>
 			</div>
 		</div>
@@ -685,6 +679,37 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><ion-icon style="color:white;height: 40px;width: 40px;" name="arrow-up-outline"></ion-icon></a>
 	</div>
+
+	<script>
+		const url='https://contactme2899.herokuapp.com/contacts/';
+		const formEl=document.querySelector('form');
+		formEl.addEventListener("submit",async (e)=>{
+			e.preventDefault();
+			const formData = new FormData(formEl);
+			const formDataSerialized = Object.fromEntries(formData);
+			console.log(formDataSerialized,"formDataSerialized")
+			const jsonObject = {
+          ...formDataSerialized,
+          sendToSelf: formDataSerialized.sendToSelf ? true : false,
+        };
+			try {
+          const response = await fetch(url, {
+            method: "POST",
+            body: JSON.stringify(jsonObject),
+            headers: {
+              "Content-Type": "application/json",
+            },
+          });
+          const json = await response.json();
+          console.log(json);
+        } catch (e) {
+          console.error(e);
+          alert("there iss an error");
+        }
+		});
+
+
+	</script>
 	
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
