updated resume tools and languages

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Mahesh Manohar Jadhav</span></li>
 						<!-- <li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li> -->
-						<li><span class="first-block">Email:</span><span class="second-block">mj241199@gmail.com</span></li>
-						<li><span class="first-block">Mob no:</span><span class="second-block">7774836654</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">Mayur PG Hinjawadi, Phase-1,Pune-411557</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block"><a href="mailto:8799856476">mj241199@gmail.com</a></span></li>
+						<li><span class="first-block">Mob no:</span><span class="second-block"><a href="tel:7774836654">7774836654</a></span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">Mayur PG Hinjawadi, Phase-1,Pune-411057</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
@@ -141,16 +141,16 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">System Admin</h3>
+									<h3 class="timeline-title">System Engineer</h3>
 									<span class="company">Tata Consultancy Services - 2021 - Present</span>
 								</div>
 								<div class="timeline-body">
 									<p>
-										Working as a system administrator in environment management team.
-										We use Tableau to create, annalyse and manage dashboards for patching activities.  
-										we are also woking on automating the services using Ansible.
-										Alongside this activities we are also responsible for Configuring and managing 
-										services on both windows and linux servers.
+										Working as a System engineer in Environment Management team. 
+										We are primarily in charge of configuring and managing services on both windows and Linux servers. 
+										We are also working on automating the services using Ansible and Python. 
+										In addition to these activities we use Tableau and PowerBI to create, 
+										annalyse and manage dashboards to understand and remediate vulnerabilities.
 									</p>
 								</div>
 							</div>
@@ -164,11 +164,10 @@
 								</div>
 								<div class="timeline-body">
 									<p>
-										After joining TCS i got selected in IGNITE batch, 
-										where they teach us all the advanced technologies and tools 
-										used by industries like DevOps, Machine-Learning, AI and Automation 
-										with implementation on some internal projects.
-									</p>
+										After joining TCS, I was selected for the IGNITE batch, where we were trained in 
+										advanced skills and technologies such as DevOps, Web Development, Machine-Learning, AI, 
+										and Automation with implementation on few internal projects. 
+										This was my favourite time at TCS since I made a lot of new friends and learned a lot.
 								</div>
 							</div>
 						</li>
@@ -177,14 +176,13 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Intern</h3>
-									<span class="company">Freelancer - 2020 - 2020</span>
+									<span class="company">Freelancer(Pawale Technologies) - 2020 - 2020</span>
 								</div>
 								<div class="timeline-body">
 									<p>
-										After completing my graduation i started to work with an Start up institute 
-										on an android development project where i learned all things about android 
-										development. I worked with a team to build a commercial application for
-										client to manage their business.
+										After finishing my degree, I began working with a start-up institute on an android development project, 
+										where I became familiarised with all aspects of android development. I collaborated with a team to create 
+										an agriculture application to help a client manage their business.
 									</p>
 								</div>
 							</div>
@@ -202,7 +200,10 @@
 									<span class="company"><a href="https://www.sastra.edu/" target="_blank">SASTRA University</a> - 2020 - 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Doing my masters in computer application where they introduced us to new technologies and how to implement them like DS, IOT, Big data</p>
+									<p> 
+										Applied for my Masters in computer application to get deep grasp on Data structures, 
+										IOT, Big data, AI and Data Science.
+									</p>
 								</div>
 							</div>
 						</li>
@@ -214,7 +215,11 @@
 									<span class="company"><a href="https://www.mgmccsit.ac.in" target="_blank">MGM's college of CS & IT</a> - 2017 - 2020</span>
 								</div>
 								<div class="timeline-body">
-									<p>I completed my graduation in computer science with 8.91 CGPA. Where i got to learn about basics of all programming languages and their use cases in software development.</p>
+									<p>
+										I completed my Bachelors degree in computer science with 8.91 CGPA. 
+										Where I learned the fundamentals of all programming languages and their applications 
+										in software development.
+									</p>
 								</div>
 							</div>
 						</li>
@@ -284,8 +289,8 @@
 								<h3>DevOps</h3>
 								<p>
 									I know agile methodologies with great understanding 
-									of DevOps tools like GitHub, Docker, Jenkins, Ansible and
-									Kubernetes.
+									of DevOps tools such as Git, GitHub, Docker, Jenkins, Ansible 
+									and	Kubernetes.
 								</p>
 							</div>
 						</div>
@@ -299,8 +304,8 @@
 							<div class="feature-copy">
 								<h3>Cloud</h3>
 								<p>
-									I have learned all core concepts of Cloud and its services like AWS,GCP and Azure. 
-									I worked most on AWS so i have best knowledge on it.
+									I've learned the fundamentals of the cloud and its services such as AWS, GCP, and Azure. 
+									I spent the majority of my time working on AWS, so I am well-versed in it.
 								</p>
 							</div>
 						</div>
@@ -309,13 +314,14 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<ion-icon style="color:red;height: 60px;width: 60px;padding-top: 18px;" name="logo-android"></ion-icon>
+								<ion-icon style="color:red;height: 60px;width: 60px;padding-top: 18px;" name="analytics-outline"></ion-icon>
 							</span>
 							<div class="feature-copy">
 								<h3>Automation</h3>
 								<p>
-									I worked on a project to automated all the services using Ansible and Python.So,
-									I know the importance and implementation of automation in IT industry. 
+									I believe that automation is essential these days in order to save time, effort, and money 
+									while reducing manual errors. I worked on few projects to automate the services and deployments 
+									with ansible and python. 
 								</p>
 							</div>
 						</div>
@@ -339,7 +345,7 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<ion-icon style="color:red;height: 60px;width: 60px;padding-top: 18px;" name="analytics-outline"></ion-icon>
+								<ion-icon style="color:red;height: 60px;width: 60px;padding-top: 18px;" name="logo-android"></ion-icon>
 							</span>
 							<div class="feature-copy">
 								<h3>App Development</h3>
@@ -386,26 +392,26 @@
 					<div class="chart" data-percent="99"><span><strong>Python</strong>99%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="92"><span><strong>C++</strong>92%</span></div>
+					<div class="chart" data-percent="98"><span><strong>HTML</strong>98%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="97"><span><strong>SQL</strong>97%</span></div>
 				</div>
+	
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="96"><span><strong>Dart</strong>96%</span></div>
+					<div class="chart" data-percent="90"><span><strong>JavaScript</strong>90%</span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="94"><span><strong>CSS</strong>94%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="95"><span><strong>Ansible</strong>95%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="97"><span><strong>HTML</strong>97%</span></div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="91"><span><strong>JavaScript</strong>91%</span></div>
+					<div class="chart" data-percent="96"><span><strong>C++</strong>96%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
+					<div class="chart" data-percent="91"><span><strong>Dart</strong>91%</span></div>
 				</div>
 			</div>
 			
@@ -420,68 +426,68 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">Git/Github</span><span class="value-right">95%</span></h3>
+						<h3><span class="name-left">Django/Flask</span><span class="value-right">98%</span></h3>
 						<div class="progress">
 						<div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
-						aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+						aria-valuenow="98" aria-valuemin="0" aria-valuemax="100" style="width:98%">
 						</div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Docker</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left">AWS</span><span class="value-right">86%</span></h3>
 						<div class="progress">
 						<div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
-						aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+						aria-valuenow="86" aria-valuemin="0" aria-valuemax="100" style="width:86%">
 						</div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">PHP</span><span class="value-right">80%</span></h3>
+						<h3><span class="name-left">PostgreSQL</span><span class="value-right">93%</span></h3>
 						<div class="progress">
 						<div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
-						aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+						aria-valuenow="93" aria-valuemin="0" aria-valuemax="100" style="width:93%">
 						</div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">85%</span></h3>
+						<h3><span class="name-left">Nginx</span><span class="value-right">89%</span></h3>
 						<div class="progress">
 						<div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
-						aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+						aria-valuenow="89" aria-valuemin="0" aria-valuemax="100" style="width:89%">
 						</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">Design</span><span class="value-right">100%</span></h3>
+						<h3><span class="name-left">Git/Github</span><span class="value-right">97%</span></h3>
 						<div class="progress">
 						<div class="progress-bar progress-bar-5 progress-bar-striped active" role="progressbar"
-						aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+						aria-valuenow="97" aria-valuemin="0" aria-valuemax="100" style="width:97%">
 						</div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Ruby</span><span class="value-right">70%</span></h3>
+						<h3><span class="name-left">Docker</span><span class="value-right">90%</span></h3>
 						<div class="progress">
 						<div class="progress-bar progress-bar-striped active" role="progressbar"
-						aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+						aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
 						</div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Python</span><span class="value-right">85%</span></h3>
+						<h3><span class="name-left">Jenkins</span><span class="value-right">91%</span></h3>
 						<div class="progress">
 						<div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
-						aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+						aria-valuenow="91" aria-valuemin="0" aria-valuemax="100" style="width:91%">
 						</div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">jQuery</span><span class="value-right">75%</span></h3>
+						<h3><span class="name-left">MongoDB</span><span class="value-right">92%</span></h3>
 						<div class="progress">
 						<div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
-						aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+						aria-valuenow="92" aria-valuemin="0" aria-valuemax="100" style="width:92%">
 						</div>
 						</div>
 					</div>
