added work details

--- a/index.html
+++ b/index.html
@@ -581,37 +581,39 @@
 				</div>
 			</div>
 			<div class="row">
+
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
+						<a href="https://www.kagnecoachingclasses.in/" class="blog-bg" style="background-image: url(images/kcc.png);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Photoshoot On The Street</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
+							<h3><a href="https://www.kagnecoachingclasses.in/">Kagne Coaching Classes</a></h3>
+							<p>
+								Website to manage coaching institute.
+							</p>
+							<p>
+								Database : MySQL<br>
+								Deployed using : Nginx and AWS EC2
+							</p>
 						</div> 
 					</div>
 				</div>
+
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
+						<a href="https://www.kagnecoachingclasses.in/" class="blog-bg" style="background-image: url(images/studentmanagement.png);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Surfing at Philippines</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
+							<h3><a href="https://www.kagnecoachingclasses.in/">Kagne Coaching Classes</a></h3>
+							<p>
+								Website to manage coaching institute.
+							</p>
+							<p>
+								Database : MySQL<br>
+								Deployed using : Nginx and AWS EC2
+							</p>
 						</div> 
 					</div>
 				</div>
+
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
