all work details/project updated

--- a/index.html
+++ b/index.html
@@ -588,10 +588,13 @@
 						<div class="blog-text">
 							<h3><a href="https://www.kagnecoachingclasses.in/">Kagne Coaching Classes</a></h3>
 							<p>
-								Website to manage coaching institute.
+								KCC is a coaching institute based in kandhar, Nanded. This website helps them to 
+								manage students and publish their notes and results on the web.
 							</p>
 							<p>
-								Database : MySQL<br>
+								Frontend : HTML,CSS,JS <br>
+								Backend : Django,Python <br>
+								Database : MySQL <br>
 								Deployed using : Nginx and AWS EC2
 							</p>
 						</div> 
@@ -600,15 +603,18 @@
 
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="https://www.kagnecoachingclasses.in/" class="blog-bg" style="background-image: url(images/studentmanagement.png);"></a>
+						<a href="https://student-management-site.herokuapp.com/" class="blog-bg" style="background-image: url(images/studentmanagement.png);"></a>
 						<div class="blog-text">
-							<h3><a href="https://www.kagnecoachingclasses.in/">Kagne Coaching Classes</a></h3>
+							<h3><a href="https://student-management-site.herokuapp.com/">Student Management Website</a></h3>
 							<p>
-								Website to manage coaching institute.
+								This is a complex Django project for managing teachers and students, as well as user 
+								authentication and a variety of other features.
 							</p>
 							<p>
-								Database : MySQL<br>
-								Deployed using : Nginx and AWS EC2
+								Frontend : HTML,CSS,JS <br>
+								Backend : Django,Python <br>
+								Database : PostgreSQL <br>
+								Deployed using : Heroku
 							</p>
 						</div> 
 					</div>
@@ -616,19 +622,62 @@
 
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
+						<a href="https://www.maharashtragadkille.com/" class="blog-bg" style="background-image: url(images/maharashtragadkille.png);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Capture Living On Uderwater</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
-							</ul>
+							<h3><a href="https://www.maharashtragadkille.com/">Maharashtra Gadkille Tourism</a></h3>
+							<p>
+								Maharashtra Gadkille is a tourism and trekking organization. This website is designed to
+								showcase their portfolio and manage business.
+							</p>
+							<p>
+								Frontend : HTML,CSS,JS <br>
+								Backend : Django,Python <br>
+								Database : MySQL <br>
+								Deployed using : Nginx and AWS EC2 
+							</p> 
+
 						</div> 
 					</div>
 				</div>
+
+				<div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="https://bloodnegative.epizy.com/" class="blog-bg" style="background-image: url(images/blooddonation.png);"></a>
+						<div class="blog-text">
+							<h3><a href="https://bloodnegative.epizy.com/">BlOOD negative</a></h3>
+							<p>
+								Blood negative web project is built using PHP. It typically acts as an intermediary 
+								between blood donors and patients in need of blood.
+							</p>
+							<p>
+								Frontend : HTML,CSS,JS <br>
+								Backend : PHP <br>
+								Database : MySQL <br>
+								Deployed using : InfinityFree
+							</p>
+						</div> 
+					</div>
+				</div>
+
+				<!-- <div class="col-md-4">
+					<div class="fh5co-blog animate-box">
+						<a href="https://www.kagnecoachingclasses.in/" class="blog-bg" style="background-image: url(images/blooddonation.png);"></a>
+						<div class="blog-text">
+							<h3><a href="https://www.kagnecoachingclasses.in/">Blood Donation</a></h3>
+							<p>
+								Maharashtra Gadkille is a tourism and trekking organization. This website is designed to
+								showcase their portfolio and manage their business.
+							</p>
+							<p>
+								Frontend : HTML,CSS,JS <br>
+								Backend : Django <br>
+								Database : MySQL <br>
+								Deployed using : Nginx and AWS EC2
+							</p>
+						</div> 
+					</div>
+				</div> -->
+
 			</div>
 		</div>
 	</div>
@@ -641,8 +690,8 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<!-- <h2>Hire Me!</h2> -->
-					<p></p>
-					<p><a href="#" class="btn btn-default btn-lg">Hire Me!</a></p>
+					<p>If you liked my work and want me to collaborate with you.</p>
+					<p><a href="https://www.linkedin.com/in/ursmaheshj" class="btn btn-default btn-lg">Contact Me!</a></p>
 				</div>
 			</div>
 		</div>
