certification added added

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 						<li><span class="first-block">Email:</span><span class="second-block"><a href="mailto:8799856476">mj241199@gmail.com</a></span></li>
 						<li><span class="first-block">Mob no:</span><span class="second-block"><a href="tel:7774836654">7774836654</a></span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Mayur PG Hinjawadi, Phase-1,Pune-411057</span></li>
+						<li><a href="https://ursmaheshj.github.io/Course-Completion-Certificates/" target="_blank" >My Certificates </a></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
