--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>About Me</h2>
-				</div>
+				</div>	
 			</div>
 			<div class="row">
 				<div class="col-md-4">
@@ -103,14 +103,26 @@
 						<li><span class="first-block">Email:</span><span class="second-block"><a href="mailto:8799856476">mj241199@gmail.com</a></span></li>
 						<li><span class="first-block">Mob no:</span><span class="second-block"><a href="tel:7774836654">7774836654</a></span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Mayur PG Hinjawadi, Phase-1,Pune-411057</span></li>
-						<li><a href="https://ursmaheshj.github.io/Course-Completion-Certificates/" target="_blank" >My Certificates </a></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Hello There!</h2>
-					<p>
+					<!-- <h2>Hello There!</h2> -->
+					<!-- <p>
 						My name is Mahesh. I am a software developer based in Pune, India. I enjoy listening to music, writing computer programmes, and playing table tennis. Drawing is another hobby that entices my curiosity. 
+						Hello, my name is Mahesh. I work as a software engineer in Pune, India. Graduated with a BSC in Computer Science from MGM College in Nanded and is now pursuing a Masters degree at SASTRA University in Thanjavur. I've been with TCS for almost two years as an assistant system engineer.
+					</p> -->
+					<p>
+						Hello, my name is Mahesh. I work as a software engineer based in India. Graduated with a BSC in Computer Science from MGM College Nanded and now pursuing MCA at SASTRA University in Thanjavur. 
 					</p>
+					<p>
+						I've been with TCS for more than 2 years as an assistant system engineer where I worked on DevOps tools and strategies to develop and deploy the applications. I was part of the Environment management team to use PowerBI and Tableau for reporting and remediating vulnerabilities. I also worked on automating a few services using ansible and python along with cron jobs.
+					</p>
+						<a href="https://ursmaheshj.github.io/Course-Completion-Certificates/" target="_blank">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trophy" viewBox="0 0 16 16">
+								<path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935zM3.504 1c.007.517.026 1.006.056 1.469.13 2.028.457 3.546.87 4.667C5.294 9.48 6.484 10 7 10a.5.5 0 0 1 .5.5v2.61a1 1 0 0 1-.757.97l-1.426.356a.5.5 0 0 0-.179.085L4.5 15h7l-.638-.479a.501.501 0 0 0-.18-.085l-1.425-.356a1 1 0 0 1-.757-.97V10.5A.5.5 0 0 1 9 10c.516 0 1.706-.52 2.57-2.864.413-1.12.74-2.64.87-4.667.03-.463.049-.952.056-1.469H3.504z"/>
+							</svg> 
+							My Certificates
+						</a>
 					
 					<p>
 						<ul class="fh5co-social-icons">
@@ -124,6 +136,8 @@
 			</div>
 		</div>
 	</div>
+
+	
 
 	<div id="fh5co-resume" class="fh5co-bg-color">
 		<div class="container">
