work exp added as system engineer

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
 								<div class="timeline-body">
 									<p>
 										Working as a System engineer in Environment Management team. 
-										We are primarily in charge of configuring and managing services on both windows and Linux servers. 
-										We are also working on automating the services using Ansible and Python. 
-										In addition to these activities we use Tableau and PowerBI to create, 
-										annalyse and manage dashboards to understand and remediate vulnerabilities.
+										We primarily use Tableau and PowerBI to create, annalyse and manage dashboards to 
+										understand and remediate vulnerabilities. We work on DevOps strategies to optimize software deployments.
+										We also help clients configure and manage application services on windows/Linux servers. 
+										In addition to these activities we are also working on automating the services using Ansible and Python.
 									</p>
 								</div>
 							</div>
