updated about me

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 						Hello, my name is Mahesh. I work as a software engineer in Pune, India. Graduated with a BSC in Computer Science from MGM College in Nanded and is now pursuing a Masters degree at SASTRA University in Thanjavur. I've been with TCS for almost two years as an assistant system engineer.
 					</p> -->
 					<p>
-						Hello, my name is Mahesh. I work as a software engineer based in India. Graduated with a BSC in Computer Science from MGM College Nanded and now pursuing MCA at SASTRA University in Thanjavur. 
+						Hello, I am Mahesh. I work as a software engineer in India. Graduated with a BSC in Computer Science from MGM College Nanded and now pursuing MCA at SASTRA University in Thanjavur. 
 					</p>
 					<p>
-						I've been with TCS for more than 2 years as an assistant system engineer where I worked on DevOps tools and strategies to develop and deploy the applications. I was part of the Environment management team to use PowerBI and Tableau for reporting and remediating vulnerabilities. I also worked on automating a few services using ansible and python along with cron jobs.
+						I've been with TCS for more than 2 years as an assistant system engineer where I worked on DevOps tools and strategies to develop and deploy the applications. I was part of the Environment management team to use PowerBI and Tableau for reporting and remediating vulnerabilities. I have also worked on automating services using ansible and python along with cron jobs.
 					</p>
 						<a href="https://ursmaheshj.github.io/Course-Completion-Certificates/" target="_blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trophy" viewBox="0 0 16 16">
