--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/mahesh.jadhav.webp);"></div>
 							<h1><span>Mahesh Jadhav</span></h1>
-							<h3><span>Developer / Programmer</span></h3>
+							<h3><span>Developer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://www.github.com/ursmaheshj" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
@@ -106,11 +106,8 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<!-- <h2>Hello There!</h2> -->
-					<!-- <p>
-						My name is Mahesh. I am a software developer based in Pune, India. I enjoy listening to music, writing computer programmes, and playing table tennis. Drawing is another hobby that entices my curiosity. 
-						Hello, my name is Mahesh. I work as a software engineer in Pune, India. Graduated with a BSC in Computer Science from MGM College in Nanded and is now pursuing a Masters degree at SASTRA University in Thanjavur. I've been with TCS for almost two years as an assistant system engineer.
-					</p> -->
+					<h3>Hello There!</h3>
+					
 					<p>
 						Hello, I am Mahesh. I work as a software engineer in India. Graduated with a BSC in Computer Science from MGM College Nanded and now pursuing MCA at SASTRA University in Thanjavur. 
 					</p>
