--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
 	</div>
 
 	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url();">
+		<div class="video fh5co-video" style="background-image: url(https://metrics.lecoq.io/ursmaheshj?template=classic&isocalendar=1&base=header%2C%20activity%2C%20community%2C%20repositories%2C%20metadata&base.indepth=false&base.hireable=false&base.skip=false&isocalendar=false&isocalendar.duration=half-year&config.timezone=Asia%2FCalcutta);">
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
