breaked URLs changed

--- a/index.html
+++ b/index.html
@@ -615,9 +615,9 @@
 
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="https://student-management-site.herokuapp.com/" class="blog-bg" style="background-image: url(images/studentmanagement.png);"></a>
+						<a href="https://medium.com/@ursmaheshj/student-management-website-using-django-with-source-code-f52fb101a056" target="_blank" class="blog-bg" style="background-image: url(images/studentmanagement.png);"></a>
 						<div class="blog-text">
-							<h3><a href="https://student-management-site.herokuapp.com/">Student Management Website</a></h3>
+							<h3><a href="https://medium.com/@ursmaheshj/student-management-website-using-django-with-source-code-f52fb101a056" target="_blank">Student Management Website</a></h3>
 							<p>
 								This is a complex Django project for managing teachers and students, as well as user 
 								authentication and a variety of other features.
@@ -634,9 +634,9 @@
 
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="https://www.maharashtragadkille.com/" class="blog-bg" style="background-image: url(images/maharashtragadkille.png);"></a>
+						<a href="https://www.maharashtragadkille.com/" target="_blank" class="blog-bg" style="background-image: url(images/maharashtragadkille.png);"></a>
 						<div class="blog-text">
-							<h3><a href="https://www.maharashtragadkille.com/">Maharashtra Gadkille Tourism</a></h3>
+							<h3><a href="https://www.maharashtragadkille.com/" target="_blank">Maharashtra Gadkille Tourism</a></h3>
 							<p>
 								Maharashtra Gadkille is a tourism and trekking organization. This website is designed to
 								showcase their portfolio and manage business.
@@ -654,9 +654,9 @@
 
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="https://bloodnegative.epizy.com/" class="blog-bg" style="background-image: url(images/blooddonation.png);"></a>
+						<a href="https://medium.com/@ursmaheshj/bloodnegative-ae208d09e57e" target="_blank" class="blog-bg" style="background-image: url(images/blooddonation.png);"></a>
 						<div class="blog-text">
-							<h3><a href="https://bloodnegative.epizy.com/">BlOOD negative</a></h3>
+							<h3><a href="https://medium.com/@ursmaheshj/bloodnegative-ae208d09e57e" target="_blank">BlOOD negative</a></h3>
 							<p>
 								Blood negative web project is built using PHP. It typically acts as an intermediary 
 								between blood donors and patients in need of blood.
