--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h3>Hello There!</h3>
+					<h3>Namaste !</h3>
 					
 					<p>
-						Hello, I am Mahesh. I work as a software engineer in India. Graduated with a BSC in Computer Science from MGM College Nanded and now pursuing MCA at SASTRA University in Thanjavur. 
+						Mahesh here. I work as a software engineer in India. Graduated with a BSC in Computer Science from MGM College Nanded and now pursuing MCA at SASTRA University in Thanjavur. 
 					</p>
 					<p>
 						I've been with TCS for more than 2 years as an assistant system engineer where I worked on DevOps tools and strategies to develop and deploy the applications. I was part of the Environment management team to use PowerBI and Tableau for reporting and remediating vulnerabilities. I have also worked on automating services using ansible and python along with cron jobs.
